Fix uneven dispalying of logo images

--- a/source/assets/stylesheets/styles/_project_story_large_tile.scss
+++ b/source/assets/stylesheets/styles/_project_story_large_tile.scss
@@ -25,6 +25,8 @@
 
 .project-story-large-tile__image-container {
   box-sizing: border-box;
+  float: left;
+  padding: 10px;
   position: relative;
   width: 50%;
 
@@ -37,14 +39,13 @@
     height: 0;
     position: absolute;
     top: 32px;
-    right: 5px;
+    right: 10px;
     width: 0;
   }
 
   @include breakpoint($max-mobile-container) {
     &:before {
-      border-width: 16px 18px 16px 16px;
-      right: 12px;
+      border-width: 14px 16px 14px 14px;
     }
   }
 
@@ -53,12 +54,7 @@
 
     &:before {
       border-color: transparent transparent $white transparent;
-      border-style: solid;
       border-width: 12px 14px 12px 12px;
-      content: '';
-      display: block;
-      height: 0;
-      position: absolute;
       top: 167px;
       left: 20px;
       width: 0;
@@ -69,15 +65,11 @@
 .project-story-large-tile__image {
   display: block;
   height: 130px;
-  float: left;
   object-fit: cover;
-  padding: 10px;
-  width: 90%;
+  width: 100%;
 
   @include breakpoint($tablet-breakpoint) {
     height: 180px;
-    padding: 10px;
-    width: 95%;
   }
 }
 
